# packages/api-client/openapi.json
@@ -2021,6 +2021,20 @@
         "title": "RedemptionStatus",
         "type": "string"
       },
+      "ResetInitialPasswordRequest": {
+        "properties": {
+          "email": {
+            "format": "email",
+            "title": "Email",
+            "type": "string"
+          }
+        },
+        "required": [
+          "email"
+        ],
+        "title": "ResetInitialPasswordRequest",
+        "type": "object"
+      },
       "SignupBoardRow": {
         "properties": {
           "going": {
@@ -2893,6 +2907,40 @@
   },
   "openapi": "3.1.0",
   "paths": {
+    "/api/v1/auth/reset-initial-password": {
+      "post": {
+        "operationId": "reset_password_to_initial_api_v1_auth_reset_initial_password_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ResetInitialPasswordRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "204": {
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "summary": "Reset Password To Initial",
+        "tags": [
+          "users"
+        ]
+      }
+    },
     "/api/v1/auth/sync": {
       "post": {
         "operationId": "sync_current_user_api_v1_auth_sync_post",
